completing data extraction function

--- a/data_extraction/Full_program_data_extraction_by_day.ipynb
+++ b/data_extraction/Full_program_data_extraction_by_day.ipynb
@@ -460,13 +460,57 @@
         "    else:\n",
         "      break\n",
         "  \n",
-        "  '''today = datetime.date.today()\n",
+        "  today = datetime.date.today()\n",
         "  mktcap_page = 'https://coinmarketcap.com/currencies/'+ coin_name +'/historical-data/?start=20130428&amp;end='+\"{:%Y%m%d}\".format(today)\n",
         "  page = urllib2.urlopen(mktcap_page)\n",
         "  soup = BeautifulSoup(page, 'html.parser')\n",
         "  table = soup.find(\"table\")\n",
         "  headings = [th.get_text().strip() for th in table.find(\"tr\").find_all(\"th\")]\n",
-        "  headings = [x.replace('*','') for x in headings]'''\n",
+        "  headings = [x.replace('*','') for x in headings]\n",
+        "\n",
+        "  datasets = []\n",
+        "\n",
+        "  for row in soup.find_all(\"tr\")[1:]:\n",
+        "      dataset = dict(zip(headings, (tr.get_text() for tr in row.find_all(\"td\"))))\n",
+        "      if len(dataset) > 1:\n",
+        "          datasets.append(dataset)\n",
+        "\n",
+        "  my_df = pd.DataFrame(datasets)\n",
+        "  full_data = my_df.set_index('Date')\n",
+        "\n",
+        "\n",
+        "  # This function replaces ',' for nothing and then changes data type object to float\n",
+        "\n",
+        "  def obj_to_num(df,cols):\n",
+        "      \n",
+        "      def obj_to_num(row):\n",
+        "          if ',' in str(row):\n",
+        "            row = row.replace(',','')\n",
+        "            return float(row)\n",
+        "          else:\n",
+        "            return float(row)\n",
+        "\n",
+        "      for col in cols:     \n",
+        "          df[col] = df[col].apply(obj_to_num) \n",
+        "      return df\n",
+        "\n",
+        "  # This function changes data column (object) to timestamp[ns] and also can change all dataframe clumns to float \n",
+        "\n",
+        "  def prepare_data(file):\n",
+        "\n",
+        "    dateparse = lambda x: datetime.datetime.strptime(x, '%b %d, %Y').strftime('%Y-%m-%d')\n",
+        "    data  = pd.read_csv(file, parse_dates=[0], date_parser=dateparse)\n",
+        "    columns = ['Open','High','Low','Close','Volume','Market Cap']\n",
+        "    num_data = obj_to_num(data,columns)\n",
+        "    data['Date'] = data['Date'].dt.tz_localize(None)\n",
+        "    data = data.groupby([pd.Grouper(key='Date', freq='d')]).first().reset_index()\n",
+        "    data = data.set_index('Date')\n",
+        "    data = data[['High','Low']]\n",
+        "    data.dropna(subset=['High','Low'], inplace=True)\n",
+        "\n",
+        "    return data\n",
+        "\n",
+        "\n",
         "\n",
         "  return coin_name\n",
         "\n",
