--- a/neural_networks/LSTM_for_forecasting_BTC.ipynb
+++ b/neural_networks/LSTM_for_forecasting_BTC.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "LSTM_for_forecasting_BTC.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -65,9 +66,10 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import datetime"
       ],
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -105,21 +107,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hy79PmPeGzeL",
+        "id": "6ar-bzohJ1Co",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
         },
-        "outputId": "63bf0c0d-75c5-4f9f-eaac-eb554f224b5e"
+        "outputId": "453d48d7-9eb9-47e5-b673-635305459069"
       },
       "source": [
-        "kill_am = lambda x: x.replace('-AM','').replace('-PM','')\n",
         "data = pd.read_csv('Binance_BTCUSDT_1h.csv', header=1)\n",
+        "kill_am = lambda x: datetime.datetime.strptime(x,'%Y-%m-%d %I-%p')\n",
         "data['Date'] = data['Date'].apply(kill_am)\n",
         "data.head(15)"
       ],
-      "execution_count": 4,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +158,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2020-08-14 10</td>\n",
+              "      <td>2020-08-14 22:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11761.80</td>\n",
               "      <td>11798.05</td>\n",
@@ -167,7 +169,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2020-08-14 09</td>\n",
+              "      <td>2020-08-14 21:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11762.04</td>\n",
               "      <td>11780.27</td>\n",
@@ -178,7 +180,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2020-08-14 08</td>\n",
+              "      <td>2020-08-14 20:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11801.94</td>\n",
               "      <td>11825.36</td>\n",
@@ -189,7 +191,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2020-08-14 07</td>\n",
+              "      <td>2020-08-14 19:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11823.24</td>\n",
               "      <td>11825.09</td>\n",
@@ -200,7 +202,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2020-08-14 06</td>\n",
+              "      <td>2020-08-14 18:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11787.66</td>\n",
               "      <td>11833.34</td>\n",
@@ -211,7 +213,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>2020-08-14 05</td>\n",
+              "      <td>2020-08-14 17:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11809.85</td>\n",
               "      <td>11842.00</td>\n",
@@ -222,7 +224,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>2020-08-14 04</td>\n",
+              "      <td>2020-08-14 16:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11740.35</td>\n",
               "      <td>11850.00</td>\n",
@@ -233,7 +235,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>2020-08-14 03</td>\n",
+              "      <td>2020-08-14 15:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11706.71</td>\n",
               "      <td>11748.78</td>\n",
@@ -244,7 +246,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>2020-08-14 02</td>\n",
+              "      <td>2020-08-14 14:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11714.02</td>\n",
               "      <td>11714.02</td>\n",
@@ -255,7 +257,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>2020-08-14 01</td>\n",
+              "      <td>2020-08-14 13:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11739.00</td>\n",
               "      <td>11739.47</td>\n",
@@ -266,7 +268,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
-              "      <td>2020-08-14 12</td>\n",
+              "      <td>2020-08-14 12:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11760.81</td>\n",
               "      <td>11762.32</td>\n",
@@ -277,7 +279,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>11</th>\n",
-              "      <td>2020-08-14 11</td>\n",
+              "      <td>2020-08-14 11:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11720.72</td>\n",
               "      <td>11774.99</td>\n",
@@ -288,7 +290,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>12</th>\n",
-              "      <td>2020-08-14 10</td>\n",
+              "      <td>2020-08-14 10:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11698.38</td>\n",
               "      <td>11758.37</td>\n",
@@ -299,7 +301,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>13</th>\n",
-              "      <td>2020-08-14 09</td>\n",
+              "      <td>2020-08-14 09:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11681.37</td>\n",
               "      <td>11706.92</td>\n",
@@ -310,7 +312,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>14</th>\n",
-              "      <td>2020-08-14 08</td>\n",
+              "      <td>2020-08-14 08:00:00</td>\n",
               "      <td>BTCUSDT</td>\n",
               "      <td>11696.98</td>\n",
               "      <td>11736.79</td>\n",
@@ -324,22 +326,22 @@
               "</div>"
             ],
             "text/plain": [
-              "             Date   Symbol      Open  ...     Close  Volume BTC  Volume USDT\n",
-              "0   2020-08-14 10  BTCUSDT  11761.80  ...  11771.93     1574.82  18511548.54\n",
-              "1   2020-08-14 09  BTCUSDT  11762.04  ...  11761.80     1658.38  19471891.50\n",
-              "2   2020-08-14 08  BTCUSDT  11801.94  ...  11762.04     1941.45  22869349.57\n",
-              "3   2020-08-14 07  BTCUSDT  11823.24  ...  11801.94     2019.25  23836092.04\n",
-              "4   2020-08-14 06  BTCUSDT  11787.66  ...  11823.24     2323.34  27446101.75\n",
-              "5   2020-08-14 05  BTCUSDT  11809.85  ...  11787.66     2838.34  33512270.42\n",
-              "6   2020-08-14 04  BTCUSDT  11740.35  ...  11809.85     5536.04  65335221.33\n",
-              "7   2020-08-14 03  BTCUSDT  11706.71  ...  11740.35     3015.38  35280004.71\n",
-              "8   2020-08-14 02  BTCUSDT  11714.02  ...  11706.71     2649.71  30965363.45\n",
-              "9   2020-08-14 01  BTCUSDT  11739.00  ...  11714.02     3061.48  35801032.70\n",
-              "10  2020-08-14 12  BTCUSDT  11760.81  ...  11739.00     2220.75  26060125.67\n",
-              "11  2020-08-14 11  BTCUSDT  11720.72  ...  11760.81     2399.52  28153089.36\n",
-              "12  2020-08-14 10  BTCUSDT  11698.38  ...  11720.72     2279.51  26727549.01\n",
-              "13  2020-08-14 09  BTCUSDT  11681.37  ...  11698.38     2538.00  29659039.42\n",
-              "14  2020-08-14 08  BTCUSDT  11696.98  ...  11681.37     2687.11  31441870.80\n",
+              "                  Date   Symbol      Open  ...     Close  Volume BTC  Volume USDT\n",
+              "0  2020-08-14 22:00:00  BTCUSDT  11761.80  ...  11771.93     1574.82  18511548.54\n",
+              "1  2020-08-14 21:00:00  BTCUSDT  11762.04  ...  11761.80     1658.38  19471891.50\n",
+              "2  2020-08-14 20:00:00  BTCUSDT  11801.94  ...  11762.04     1941.45  22869349.57\n",
+              "3  2020-08-14 19:00:00  BTCUSDT  11823.24  ...  11801.94     2019.25  23836092.04\n",
+              "4  2020-08-14 18:00:00  BTCUSDT  11787.66  ...  11823.24     2323.34  27446101.75\n",
+              "5  2020-08-14 17:00:00  BTCUSDT  11809.85  ...  11787.66     2838.34  33512270.42\n",
+              "6  2020-08-14 16:00:00  BTCUSDT  11740.35  ...  11809.85     5536.04  65335221.33\n",
+              "7  2020-08-14 15:00:00  BTCUSDT  11706.71  ...  11740.35     3015.38  35280004.71\n",
+              "8  2020-08-14 14:00:00  BTCUSDT  11714.02  ...  11706.71     2649.71  30965363.45\n",
+              "9  2020-08-14 13:00:00  BTCUSDT  11739.00  ...  11714.02     3061.48  35801032.70\n",
+              "10 2020-08-14 12:00:00  BTCUSDT  11760.81  ...  11739.00     2220.75  26060125.67\n",
+              "11 2020-08-14 11:00:00  BTCUSDT  11720.72  ...  11760.81     2399.52  28153089.36\n",
+              "12 2020-08-14 10:00:00  BTCUSDT  11698.38  ...  11720.72     2279.51  26727549.01\n",
+              "13 2020-08-14 09:00:00  BTCUSDT  11681.37  ...  11698.38     2538.00  29659039.42\n",
+              "14 2020-08-14 08:00:00  BTCUSDT  11696.98  ...  11681.37     2687.11  31441870.80\n",
               "\n",
               "[15 rows x 8 columns]"
             ]
@@ -347,7 +349,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 21
         }
       ]
     },
@@ -356,10 +358,80 @@
       "metadata": {
         "id": "rYNVxoPONKcO",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        },
+        "outputId": "bb518810-6816-4103-c64a-1ae772a3b1c6"
+      },
+      "source": [
+        "data.dtypes"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date           datetime64[ns]\n",
+              "Symbol                 object\n",
+              "Open                  float64\n",
+              "High                  float64\n",
+              "Low                   float64\n",
+              "Close                 float64\n",
+              "Volume BTC            float64\n",
+              "Volume USDT           float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cpdW8Uh3oZiO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "37c7f12a-e85b-4782-f00d-646dcaaebd90"
+      },
+      "source": [
+        "len(data)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "26251"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Na4lWLPvouHD",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# some insights \n",
+        "1.- Hour more high in the last month\n",
+        "2.- "
       ],
       "execution_count": null,
       "outputs": []
