changing lstm structure

--- a/Data_extraction_and_models_comparison.ipynb
+++ b/Data_extraction_and_models_comparison.ipynb
@@ -4588,6 +4588,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "yE8SF_Jv76nO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# ► import mpl_finance interesting package"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "317BoBbVn7q_",
         "colab_type": "code",
         "colab": {}
@@ -4973,6 +4986,10 @@
         "colab": {}
       },
       "source": [
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "\n",
+        "\n",
         "class Model(nn.Module):\n",
         "    def __init__(self, input_size, hidden_size, output_size):\n",
         "        super(Model, self).__init__()\n",
@@ -5005,7 +5022,7 @@
         "        return outputs\n",
         "    "
       ],
-      "execution_count": 32,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -5045,7 +5062,7 @@
         "        y_train,\n",
         "        x_val=None,\n",
         "        y_val=None,\n",
-        "        batch_size=100,\n",
+        "        batch_size=20,\n",
         "        n_epochs=15,\n",
         "        do_teacher_forcing=None,\n",
         "    ):\n",
@@ -5062,8 +5079,9 @@
         "                loss.backward()\n",
         "                self.optimizer.step()\n",
         "                train_loss += loss.item()\n",
+        "                train_loss /= batch\n",
         "            self.scheduler.step()\n",
-        "            train_loss /= batch\n",
+        "            \n",
         "            self.train_losses.append(train_loss)\n",
         "\n",
         "            self._validation(x_val, y_val, batch_size)\n",
@@ -5090,12 +5108,13 @@
         "            return\n",
         "        with torch.no_grad():\n",
         "            val_loss = 0\n",
+        "            batch = 1\n",
         "            for x_batch, y_batch, batch in self.generate_batch_data(x_val, y_val, batch_size):\n",
         "                y_pred = self.model(x_batch)\n",
         "                loss = self.loss_fn(y_pred, y_batch)\n",
         "                val_loss += loss.item()\n",
-        "                val_loss /= batch\n",
-        "                self.val_losses.append(val_loss)\n",
+        "            val_loss /= batch\n",
+        "            self.val_losses.append(val_loss)\n",
         "\n",
         "    def evaluate(self, x_test, y_test, batch_size, future=1):\n",
         "        with torch.no_grad():\n",
@@ -5110,7 +5129,7 @@
         "                test_loss += loss.item()\n",
         "                actual += torch.squeeze(y_batch[:, -1]).data.cpu().numpy().tolist()\n",
         "                predicted += torch.squeeze(y_pred[:, -1]).data.cpu().numpy().tolist()\n",
-        "                test_loss /= batch\n",
+        "            test_loss /= batch\n",
         "            return actual, predicted, test_loss\n",
         "\n",
         "    def plot_losses(self):\n",
@@ -5119,7 +5138,7 @@
         "        plt.legend()\n",
         "        plt.title(\"Losses\")"
       ],
-      "execution_count": 36,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -5137,7 +5156,7 @@
         "    y_pred = scaler.inverse_transform(y_pred)\n",
         "    return y_pred"
       ],
-      "execution_count": 28,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -5157,7 +5176,7 @@
         "        df[col] = scaler.inverse_transform(df[col])\n",
         "    return df"
       ],
-      "execution_count": 29,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -5175,7 +5194,7 @@
         "scheduler_1 = optim.lr_scheduler.StepLR(optimizer_1, step_size=5, gamma=0.1)\n",
         "optimization_1 = Optimization(model_1, loss_fn_1, optimizer_1, scheduler_1)"
       ],
-      "execution_count": 30,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -5185,26 +5204,25 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
+          "height": 292
         },
-        "outputId": "48ac0355-ff32-43c4-ee89-12eb9bb60afa"
+        "outputId": "528cde64-7466-4af3-c1f7-9d183df98300"
       },
       "source": [
         "optimization_1.train(x_train, y_train, x_val, y_val, do_teacher_forcing=False)"
       ],
-      "execution_count": 37,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "UnboundLocalError",
+          "ename": "ZeroDivisionError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-0daabd852e7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moptimization_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdo_teacher_forcing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-27-26fb2e8a5cd8>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, x_train, y_train, x_val, y_val, batch_size, n_epochs, do_teacher_forcing)\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0melapsed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-27-26fb2e8a5cd8>\u001b[0m in \u001b[0;36m_validation\u001b[0;34m(self, x_val, y_val, batch_size)\u001b[0m\n\u001b[1;32m     77\u001b[0m                 \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m                 \u001b[0mval_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m             \u001b[0mval_loss\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mval_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'batch' referenced before assignment"
+            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-63-0daabd852e7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moptimization_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdo_teacher_forcing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-38-6cdbc40a9a09>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, x_train, y_train, x_val, y_val, batch_size, n_epochs, do_teacher_forcing)\u001b[0m\n\u001b[1;32m     46\u001b[0m                 \u001b[0mtrain_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m                 \u001b[0mtrain_loss\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
           ]
         }
       ]
