--- a/Data_extraction_and_models_comparison.ipynb
+++ b/Data_extraction_and_models_comparison.ipynb
@@ -13,7 +13,9 @@
         "AIM2X3Ov1DSl",
         "96iVQmuki-6P"
       ],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM/3CV23XnCljR6qtu/XqU1",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -915,6 +917,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/juan-ivan-NV/Btc_trading/blob/master/Data_extraction_and_models_comparison.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
