--- a/Data_extraction_and_models_comparison.ipynb
+++ b/Data_extraction_and_models_comparison.ipynb
@@ -14,7 +14,7 @@
         "96iVQmuki-6P"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/3CV23XnCljR6qtu/XqU1",
+      "authorship_tag": "ABX9TyMvHdh9jn1w41705CdoRkzt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2529,6 +2529,42 @@
           "execution_count": 30
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zjg-WMXzQ1_f",
+        "colab_type": "text"
+      },
+      "source": [
+        "### XGBoost"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b4EEtSXDQ8Vm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9mQrhUttQ8Yv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
