--- a/Data_extraction_and_models_comparison.ipynb
+++ b/Data_extraction_and_models_comparison.ipynb
@@ -14,7 +14,7 @@
         "96iVQmuki-6P"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNMXHJWZk/hBvcNjBtUw3ot",
+      "authorship_tag": "ABX9TyP1y3rvX0+5mGwHvvkoyUWO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2548,7 +2548,28 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# ► Function to bring more dates info to the xgboost model\n",
+        "\n",
+        "def create_features(df, label=None):\n",
+        "    \"\"\"\n",
+        "    Creates time series features from datetime index\n",
+        "    \"\"\"\n",
+        "    df['date'] = df.index\n",
+        "    df['hour'] = df['date'].dt.hour\n",
+        "    df['dayofweek'] = df['date'].dt.dayofweek\n",
+        "    df['quarter'] = df['date'].dt.quarter\n",
+        "    df['month'] = df['date'].dt.month\n",
+        "    df['year'] = df['date'].dt.year\n",
+        "    df['dayofyear'] = df['date'].dt.dayofyear\n",
+        "    df['dayofmonth'] = df['date'].dt.day\n",
+        "    df['weekofyear'] = df['date'].dt.weekofyear\n",
+        "    \n",
+        "    X = df[['hour','dayofweek','quarter','month','year',\n",
+        "           'dayofyear','dayofmonth','weekofyear']]\n",
+        "    if label:\n",
+        "        y = df[label]\n",
+        "        return X, y\n",
+        "    return X"
       ],
       "execution_count": null,
       "outputs": []
@@ -2561,7 +2582,28 @@
         "colab": {}
       },
       "source": [
-        ""
+        "X_train, y_train = create_features(data_train, label='Close')\n",
+        "X_test, y_test = create_features(data_test, label='Close')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PkuvpT3NCgw5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import xgboost as xgb\n",
+        "from xgboost import plot_importance, plot_tree\n",
+        "model =  xgb.XGBRegressor(objective ='reg:linear',min_child_weight=10, booster='gbtree', colsample_bytree = 0.3, learning_rate = 0.1,\n",
+        "                max_depth = 5, alpha = 10, n_estimators = 100)\n",
+        "model.fit(X_train, y_train,\n",
+        "        eval_set=[(X_train, y_train), (X_test, y_test)],\n",
+        "        early_stopping_rounds=50,\n",
+        "       verbose=False)"
       ],
       "execution_count": null,
       "outputs": []
